--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,25 @@
     #root {
       margin-right: 20px;
       margin-left: 20px;
+      margin-bottom: auto;
+      height: auto;
+    }
+    .jumbotron {
+      background-color: white;
+    }
+
+    /*#firstMap, #secondMap {
+      width: 300px;
+      height: 160px;
+      float: left;
+      margin-bottom: 20px;
+      margin-left: 280px;
+      clear:both;
+    }*/
+
+    #con {
+      /*margin-right: 20px;*/
+      margin-left: 230px;
     }
   </style> 
   </head>
